// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list should add 1 item 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      生成列表
    </h2>
    <button
      class="btn btn-secondary btn-lg"
    >
      submit
    </button>
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`list should add 4 item 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      生成列表
    </h2>
    <button
      class="btn btn-secondary btn-lg"
    >
      submit
    </button>
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        4
      </li>
      <li
        class="list-group-item"
      >
        3
      </li>
      <li
        class="list-group-item"
      >
        2
      </li>
      <li
        class="list-group-item"
      >
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`should HW2 1`] = `
<div>
  <div
    class="container"
  >
    <h2>
      生成列表
    </h2>
    <button
      class="btn btn-secondary btn-lg"
    >
      submit
    </button>
    <ul
      class="list-group"
    />
  </div>
</div>
`;
